--- a/package.json
+++ b/package.json
@@ -10,9 +10,14 @@
   "author": "Thassio Vinicius",
   "license": "MIT",
   "dependencies": {
+    "colors": "^1.4.0",
+    "domino": "^2.1.6",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "morgan": "^1.10.0"
+    "geocoder": "^0.2.3",
+    "mongoose": "^5.9.25",
+    "morgan": "^1.10.0",
+    "slugify": "^1.4.4"
   },
   "devDependencies": {
     "nodemon": "^2.0.4"
